namespaces/cp-2402-1545.cloud-platform.service.justice.gov.uk/poornima-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poornima-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/application: "poornima-test-application"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/poornima-moj/wordpressapp"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
